Removed the edit buttons and fixed the alignemnet of tables in HS report

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -58,7 +58,9 @@ body::-webkit-scrollbar {
 .not-scollable {
   overflow: hidden;
 }
-
+.w-0{
+  width: 0;
+}
 .green-clr {
   color: var(--green-clr);
 }
